# luatic

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Luatic.g4  README.md  TODO.org  clang_format.sh  generate_instructions.sh  get_backend.sh  luatic.g4
.github/workflows/: format-test.yml  linux-test.yml  lua-test.yml
backends/: CMakeLists.txt
docs/: lynx.md  syntax.md
generator/: cpplib.ml  instructions.ml
main/: main.cc
main/lua/: lua_vm.cc  lua_vm.h
main/luar/: main.cc
main/luatic/: ast.cc  ast.h  ast.hpp  codegen.cc  codegen.h  context.cc  context.h  data_types.hpp  diagnostic.hpp  helper.hpp  lexer.cc  lexer.h  operators.hpp  parser.cc  parser.h  tokenizer.cc  tokenizer.h  tokens.cc  tokens.h  tokens.hpp
main/luaticc/: main.cc
main/luna/: luna_math.cc  luna_math.h  luna_stack.cc  luna_stack.h  luna_state.cc  luna_state.h  luna_table.cc  luna_table.h  luna_values.cc  luna_values.h  luna_vm.cc  luna_vm.h  main.cc
main/shared/: binary_chunk.cc  binary_chunk.h  l_string.cc  l_string.h  literal.cc  literal.h  prototype.cc  prototype.h  read_array.hpp  version.h
scripts/: gen.sh  run.sh
src/: compiler.rs  lib.rs  main.rs
src/binary/: binary.rs  chunk.rs  helper.rs  instructions.rs  literals.rs  mod.rs  prototype.rs  variant.rs
src/frontend/: luaticlexer.rs  luaticlistener.rs  luaticparser.rs  luaticvisitor.rs  mod.rs
src/luatic/: ast.rs  codegen.rs  compiler.rs  constants.rs  exceptions.rs  mod.rs  parser.rs  runtime.rs  scanner.rs  tokenizer.rs  tokens.rs
test/: diff_tests.cc
test/cpp/: binary_chunk_tests.cc  binary_pretty_printer.cc  binary_pretty_printer.h  diff_tests.cc  instructions_pretty_printer.cc  instructions_pretty_printer.h  luna_tests.cc  pretty_printer.cc  pretty_printer.h
test/dump/: calculations1.lua  calculations2.lua  calculations3.lua  empty.lua  flow.lua  functions.lua  hello_world.lua  load.lua  local.lua  tables.lua  tail.lua
test/error/: lex1.ltc  lex2.ltc  lex3.ltc
test/ltc/: bool.ltc  calculations.ltc  comments.ltc  conditions.ltc  functions.ltc  loop.ltc  multi_lines.ltc  numbers.ltc  tables.ltc  variables.ltc
test/lua/: calculations1.lua  calculations2.lua  calculations3.lua  empty.lua  flow.lua  functions.lua  hello_world.lua  load.lua  local.lua  sieve.check  sieve.lua  sieve.luac  tables.lua  tail.lua
test/luac/: calculations1.luac  calculations2.luac  calculations3.luac  empty.luac  flow.luac  functions.luac  hello_world.luac  load.luac  local.luac  tables.luac  tail.luac
tests/: test.rs
tests/ltc/: calculation.ltc  chinese.csv  chinese.ltc  error_definitions.ltc  error_definitions.report  global.csv  global.ltc  lex_err.ltc  lex_err.report  literals.ltc  string.ltc  variables.ltc  (+2 more)
(+26 files in other folders)
